[tool.poetry]
name = "leet-code"
version = "0.1.0"
description = ""
authors = ["Francisco Alface <francisco.alface.br@avenuecode.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.11b0"
pytest = "^6.2.5"
flake8 = "^4.0.1"
bandit = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
